# STYLY-NetSync

./: .copilot-reviewer-test.md  .gitignore  AGENTS.md  CLAUDE.md  CODEX_SETUP_INSTRUCTIONS.md  LICENSE  ONREADY_TESTING_GUIDE.md  Phase_6_plan.md  README.md  _README.md  _README_JP.md  code-review-netsync.skill  codex-workflow-template.yml  test_physical_transform_6f.py
.claude/skills/code-review-netsync/: SKILL.md
.claude/skills/code-review-netsync/references/: protocol-change-checklist.md  python-server-rules.md  repo-wide-rules.md  unity-csharp-rules.md
.claude/skills/review-netsync/: SKILL.md
.claude/skills/review-netsync/references/: protocol-change-checklist.md  python-server-rules.md  repo-wide-rules.md  unity-csharp-rules.md
.devcontainer/: devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: copilot-instructions.md
.github/instructions/: csharp-instructions.md
.github/workflows/: check-main-branch-manual-pr.yml  claude.yml  codex.yml  discord-release-notes.yml  gemini-cli.yml  gemini-dispatch.yml  gemini-pr-review.yml  publish-to-pypi.yml  release-workflow.yml  set-version-and-make-release-draft.yml
STYLY-NetSync-Server/: .gitignore  AGENTS.md  CLAUDE.md  README.md  binary_serializer.py  client_simulator.py  dev  pyproject.toml  requirements.txt  server.py  test_client.py  test_client_basic.py  test_stealth_client.py
STYLY-NetSync-Server/benchmark/: AGENTS.md  CLAUDE.md  README.md  __init__.py  benchmark_config.py  client_factory.py  docker-compose.yml  locustfile.py  metrics_collector.py  netsync_manager_client.py  pyproject.toml  requirements.txt  styly_client.py
STYLY-NetSync-Server/benchmark/src/: __init__.py  benchmark_config.py  client_factory.py
STYLY-NetSync-Server/benchmark/src/clients/: __init__.py  client_interface.py  netsync_manager_client.py  styly_client.py
STYLY-NetSync-Server/benchmark/tests/: README.md  __init__.py  test_client_factory.py  test_locust_args.py
STYLY-NetSync-Server/benchmark/visualizer/: README.md  prometheus.yml
STYLY-NetSync-Server/benchmark/visualizer/grafana/: dashboard.yml  datasource.yml
STYLY-NetSync-Server/benchmark/visualizer/grafana/dashboards/: neysync_locust_dashboard.json
STYLY-NetSync-Server/examples/: config.toml
STYLY-NetSync-Server/src/styly_netsync/: __init__.py  __main__.py  adapters.py  binary_serializer.py  cli.py  client.py  client_simulator.py  config.py  default.toml  discovery.py  events.py  logging_utils.py  network_utils.py  nv_sync.py  rest_bridge.py  server.py  types.py
STYLY-NetSync-Server/src/styly_netsync/replication/: __init__.py  dispatcher.py  message_codec.py  messages.py  models.py  ownership_arbiter.py  room_registry.py  snapshot_service.py  state_relay.py
STYLY-NetSync-Server/tests/: __init__.py  client_test.py  test_all_run_methods.py  test_appid_gate.py  test_appid_gate_integration.py  test_binary_serializer.py  test_client_variable_device_store.py  test_config.py  test_discovery_probe.py  test_id_mapping_broadcast.py  test_logging_cli.py  test_multi_nic.py  test_nv_improvements.py  test_nv_protocol.py  test_nv_server_ordering.py  test_object_sync.py  test_port_error_message.py  test_python_client.py  test_reconnect_identity.py  test_replication_codec.py  test_rest_bridge.py  test_room_expiry.py  test_rpc_targeted.py  test_server_discovery_rest_startup.py  test_stealth_heartbeat.py  test_timing_monotonic.py  test_transport_split.py
STYLY-NetSync-Server/tests/integration/: __init__.py  test_client.py  test_stealth_mode.py
STYLY-NetSync-Server/tests/replication/: test_disconnect_sweep.py  test_dispatcher.py  test_models.py  test_ownership_arbiter.py  test_resync.py  test_room_registry.py  test_snapshot_service.py  test_state_relay.py
STYLY-NetSync-Unity/: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  STYLY-NetSync-Unity.slnx
STYLY-NetSync-Unity/.claude/: settings.json
STYLY-NetSync-Unity/.claude/skills/uloop-clear-console/: SKILL.md
STYLY-NetSync-Unity/.claude/skills/uloop-compile/: SKILL.md
STYLY-NetSync-Unity/.claude/skills/uloop-control-play-mode/: SKILL.md
STYLY-NetSync-Unity/.claude/skills/uloop-execute-dynamic-code/: SKILL.md
STYLY-NetSync-Unity/.claude/skills/uloop-find-game-objects/: SKILL.md
STYLY-NetSync-Unity/.uloop/: settings.permissions.json
STYLY-NetSync-Unity/Assets/Avatar/: AvatarTest.unity
STYLY-NetSync-Unity/Assets/Resources/: PICOProjectSetting.asset
STYLY-NetSync-Unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
STYLY-NetSync-Unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
STYLY-NetSync-Unity/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  QualitySettings.asset
docs/: replication-protocol-v1.md  replication-test-setup.md
(+116 files in other folders)
